# nexis-analysis

./: .gitignore  README.md  docs-requirements.txt  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  license-check.yml
docs/: docx-to-gfm.md  extract-metadata.md  extract-terms.md  index.md  install.md
nexis_analysis/: cli.py  document.py  extract.py
tests/: __init__.py  test_document.py  test_extract.py
